# acp-pseudoexternal-beta

./: README.md  pyproject.toml  requirements.txt
docs/: acp_pr_054d2aa8.txt  acp_pr_2595e216.txt  acp_pr_40dead67.txt  acp_pr_495c8f4b.txt  acp_pr_4b690adc.txt  acp_pr_60a33924.txt  acp_pr_6afde7c1.txt  acp_pr_81e6cdea.txt  acp_pr_97f29e24.txt  acp_pr_9bf979af.txt  acp_pr_ad510475.txt  acp_pr_d88c2665.txt  acp_pr_ff363d24.txt
src/miniutils/: file_utils.py  math_utils.py  text_utils.py
src/miniutils.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_file_utils.py  test_math_utils.py  test_text_utils.py
